Changed border to fix alignment issue

--- a/app/assets/stylesheets/layouts/editor/_steps.sass
+++ b/app/assets/stylesheets/layouts/editor/_steps.sass
@@ -261,7 +261,7 @@
       position: relative
       margin-bottom: 0.67em
       transition: 0.67s
-      border: 1px solid #dcdcdc
+      border: 2px solid #dcdcdc
       border-radius: 5px
       padding: 10px
       text-align: center
